fix(mobile layout): Side spacing
- Fixed spacing on mobile side's. Content is now in line with header elements.

--- a/themes/hugo-docs/assets/elements/page.scss
+++ b/themes/hugo-docs/assets/elements/page.scss
@@ -54,8 +54,8 @@
       bottom: 0;
       width: 100vw;
       left: 0;
-      padding-right: 1.5 * $space-m;
-      padding-left: 1.5 * $space-m;
+      padding-right: $space-m;
+      padding-left: $space-m;
       transition: left $transition-time ease;
     }
   }
